--- a/docs/thesis/acknowledgments.tex
+++ b/docs/thesis/acknowledgments.tex
@@ -7,4 +7,4 @@
 I would first like to thank Cinnober for giving me this opportunity and specifically my thesis advisor Oskar Janson for his dedication and vast knowledge in Bitcoin, risk and financial markets.
 Further I would also like to thank my university supervisor Dr. Jerry Eriksson for his many suggestions and inducing academic rigor into the thesis. Along with the University Examiner Henrik Bj\"{o}rklund and the many teachers at Umeå University for these last 5 years. 
   
-A special thanks to my parents for always being there and instilling a curiosity in me and an inspiration for science. 
+A special thanks to my parents for always being there and instilling a curiosity in me that led me down the path that culminated in this thesis. 
