--- a/docs/thesis/bitcoin.tex
+++ b/docs/thesis/bitcoin.tex
@@ -25,7 +25,7 @@ Bitcoin is essentially a long ledger of inputs and outputs. Note that the whole 
 
 \section{The Double-Spending problem}
 
-While digital signatures are able prove ownership of bitcoin, there is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the Double-Spending problem\footnote{At least known before 1993, mentioned in multiple articles in Advances in Cryptology - CRYPTO '93 e.g brands~\cite{crypto-1993-1108}. } which is a variation of the more general Byzantine Generals Problem~\cite{lamport:shostak:byzantine:generals}.
+While digital signatures are able prove ownership of bitcoin, there is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the Double-Spending problem\footnote{At least known before 1993, mentioned in multiple articles in Advances in Cryptology - CRYPTO '93 e.g Brands~\cite{crypto-1993-1108}. } which is a variation of the more general Byzantine Generals Problem~\cite{lamport:shostak:byzantine:generals}.
 
 %\subsection{Proof-of-Work}
 
