--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -84,10 +84,10 @@ Much similar to Network Theory, Game theory have been difficult to use in empiri
 
 \subsection{Fee complexity}
 
-The optimal fee price for each edge will most likely be too expensive to calculate in the near future as the network grows. It is not uncertain how much low capacity \gls{node}s affect the network and larger operators might be able to simply prune away these nodes before calculation. Another approach is to approximate, calculating the upper and lower bounds with adjustable granularity, akin to tolerance~\cite{goldengorin:jager:tolerance}. 
+The optimal fee price for each edge will most likely be too expensive to calculate in the near future as the network grows. It is uncertain how much low capacity \gls{node}s affect the network and larger operators might be able to simply prune away these nodes before calculation. Another approach is to approximate, calculating the upper and lower bounds with adjustable granularity, akin to tolerance~\cite{goldengorin:jager:tolerance}. 
 
 \subsection{Empirical gathering}
 
-There is still many assumptions in this the thesis. To use these strategies in practice would require extensive tuning and gathering of empirical realities. The payment size distribution may be approximated by storing the size of each routed payment. 
+There are still many assumptions in this thesis. To use these strategies in practice would require extensive tuning and gathering of empirical realities. The payment size distribution may be approximated by storing the size of each routed payment. 
 
 
