--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -1,8 +1,8 @@
 \chapter{Results}
 
-The results are retrieved running simulations based on the previous chapters. The different parameters are defined in detail in Appendix B.
+The results are retrieved running simulations based on the previous chapters. The different parameters are defined in detail in Appendix A.
 
-Every simulation is run ten times and the mean and standard deviation($\sigma$) are calculated. The source code for the simulation is available online~\cite{repository:me:thesis} . The settings used to generate these particular results is also available in the preset directory. 
+Every simulation is run ten times and the mean and standard deviation($\sigma$) are calculated. The source code for the simulation is available online~\cite{repository:me:thesis}. The settings used to generate these particular results is also available in the preset directory. 
 
 %For the most part, most environment variables are not mentioned as they affect the strategies the same. 
 
@@ -18,7 +18,7 @@ A probabilistic fee model, as suggested in Section \ref{probabilistic}, was gene
 	\caption{ The history of the node count averages with one standard deviation, for 10 runs. Initially half of the nodes utilizing the generated fee model and the other half a random model. Similarly the attachment strategies are split between Random and Barabasi-Albert. All other strategies are kept equal.
 	}
 	\label{fig:history_price}
-	\hspace*{2mm} 
+	\hspace*{2mm}
 \end{figure}
 
 \section{Attachment}
@@ -112,7 +112,7 @@ To explore the innate distribution of the network, only one set of strategies wa
 
 \begin{figure}[!htb]
 	\vspace{-3cm}
-	%\hspace*{-1cm}\
+	\hspace*{-0.5cm}\
 	\centering
 	\includegraphics[width=9cm]{images/wealth_distribution_same.png}
 	\caption{ Shows the different strategies aggregated. The exponential property is quite apparent.  
@@ -121,5 +121,5 @@ To explore the innate distribution of the network, only one set of strategies wa
 	\hspace*{2mm} 
 \end{figure}
 
-The exponential distribution is akin to previously mentioned Pareto Principle, although in Figures \ref{fig:path}, \ref{fig:same} 20\% of the network account for 60\% of the gross revenue. Note that if profit / net revenue where considered the quotient would be larger. The distribution shown here is very similar to the wealth distribution in countries~\cite{credit:swiss:distribution}.
+The exponential distribution is akin to previously mentioned Pareto Principle, although in Figures \ref{fig:path}, \ref{fig:same}, only 20\% of the network account for 60\% of the gross revenue. Note that if profit/net revenue where considered the quotient would be larger. The distribution shown here is very similar to the wealth distribution in countries~\cite{credit:swiss:distribution}.
 
